--- a/css/style.css
+++ b/css/style.css
@@ -153,12 +153,17 @@ img {
 /* hero start */
 .hero-section {
   /* to center text and buttons :) */
+  background-color: var(--navyblue);
+  padding: 188px 0;
+}
+
+.container-hero{
+  /* to center text and buttons :) */
   text-align: center;
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
-  background-color: var(--navyblue);
-  padding: 188px 0;
 }
 
 .hero-title {
@@ -229,7 +234,7 @@ img {
 /* features start */
 .feature-list {
   display: flex;
-  gap: 24px;
+  gap: 22px;
 }
 /* features end */
 
